# stm32f4-discovery-example

./: Cargo.toml  README.md  memory.x
scripts/: run-openocd
src/: main.rs
