[package]
name = "stm32f4-discovery-example"
version = "0.0.1"
authors = ["jonlamb-gh <lamb.jon.io@gmail.com>"]

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"

[dependencies.stm32f4]
version = "0.2.2"
features = ["stm32f407", "rt"]

#[dependencies.stm32f407x]
#features = ["rt"]
#version = "0.0.1"
#git = "https://github.com/jonlamb-gh/stm32f407x"
#branch = "master"

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
