[package]
name = "stm32f4-discovery-example"
version = "0.0.1"
authors = ["jonlamb-gh <lamb.jon.io@gmail.com>"]

[dependencies]
cortex-m = "0.5.2"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"

[dependencies.cortex-m-rt]
version = "0.5.1"
features = ["device"]

[dependencies.f4-bsp]
version = "0.0.1"
git = "https://github.com/jonlamb-gh/f4-bsp.git"
branch = "devel"
features = ["rt"]

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
